auto play button style changed

--- a/styles/rock-paper-scissors.css
+++ b/styles/rock-paper-scissors.css
@@ -55,3 +55,12 @@ body{
   text-shadow: 3px 3px 3px #ababab;
   margin-left: 1180px;
 }
+.autoplay-css{
+  background-color: red;
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+  padding:10px;
+  cursor:pointer;
+  border: none;
+}
